Issue #12434: make StringIO.write error message consistent with Python 2.7 nomenclature